--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -21,6 +22,6 @@
     "prisma": "^6.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9" 
   }
 }
